--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@
 
         <script type="text/javascript" src="app/libs/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="app/libs/angular/angular.min.js"></script>
+        <script type="text/javascript" src="app/libs/underscore/underscore-min.js"></script>
 
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
         <script type="text/javascript" src="app/app.js"></script>
 
+        <!-- SERVICES -->
+
+        <script type="text/javascript" src="app/services/api.service.js"></script>
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
