--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!-- Bootstrap core CSS -->
         <link href="app/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="app/libs/animate.css/animate.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
         <link href="app/assets/css/main.css" rel="stylesheet">
@@ -73,6 +74,9 @@
         <script type="text/javascript" src="app/libs/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="app/libs/angular/angular.min.js"></script>
         <script type="text/javascript" src="app/libs/underscore/underscore-min.js"></script>
+        <script type="text/javascript" src="app/libs/restangular/dist/restangular.min.js"></script>
+        <script type="text/javascript" src="app/libs/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="app/libs/crypto-js/crypto-js.js"></script>
 
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
