redirect to correct page in login

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <div class="container maincontent">
 
-            <h1>LOGGED</h1>
-            <div>{{main.admin.user | json}}</div>
+            <ui-view></ui-view>
+
         </div>
         <!--
         <div class="container">
