--- a/app/features/Login/login.view.html
+++ b/app/features/Login/login.view.html
@@ -1,1 +1,17 @@
-<h1>login</h1>
+<div id="login" class="row">
+    <div class="col-sm-1 col-md-2 col-lg-2"></div>
+    <div class="col-xs-12 col-sm-10 col-md-8 col-lg-8">
+        <div class="login_form">
+            <div style="position: absolute; padding-top: 30px;left: 60px;">
+                <img src="app/assets/images/logo.png">
+            </div>
+
+            <div class="row" id="logintitle">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <p class="text-center bold font-title">COMMUNITY <span class="color-smart bold">SMART</span></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-1 col-md-2 col-lg-2"></div>
+</div>
