--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
             <img class="logo animated pulse infinite" src="./app/assets/images/logo.png" />
         </div>
 
-        <div class="container maincontent">
+        <div class="maincontent">
 
-            <ui-view></ui-view>
+            <div class="row">
+                <div class="col-xs-1 col-sm-1 col-md-2 col-lg-2"></div>
+                <div class="col-xs-10 col-sm-10 col-md-8 col-lg-8">
+                    <ui-view></ui-view>
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-2 col-lg-2"></div>
+            </div>
 
         </div>
         <!--
