--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img class="logo animated pulse infinite" src="./app/assets/images/logo.png" />
         </div>
 
-        <div class="maincontent">
+        <div class="maincontent animated fadeIn">
 
             <div class="row">
                 <div class="col-xs-1 col-sm-1 col-md-2 col-lg-2"></div>
