--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
         <!-- Bootstrap core CSS -->
         <link href="app/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="app/libs/ladda/dist/ladda-themeless.min.css">
+
         <link href="app/libs/animate.css/animate.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
@@ -96,6 +98,9 @@
         <script type="text/javascript" src="app/libs/angular-local-storage/dist/angular-local-storage.min.js"></script>
         <script type="text/javascript" src="app/libs/crypto-js/crypto-js.js"></script>
         <script type="text/javascript" src="app/libs/postal.js/lib/postal.min.js"></script>
+        <script type="text/javascript" src="app/libs/ladda/dist/spin.min.js"></script>
+        <script type="text/javascript" src="app/libs/ladda/dist/ladda.min.js"></script>
+        <script type="text/javascript" src="app/libs/angular-ladda/dist/angular-ladda.min.js"></script>
 
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
@@ -113,6 +118,7 @@
 
         <!-- FEATURES -->
         <script type="text/javascript" src="app/features/main.controller.js"></script>
+        <script type="text/javascript" src="app/features/Login/login.controller.js"></script>
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
