--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -1,1 +1,5 @@
-<h1>home</h1>
+<div id="home" ng-controller="HomeController as home">
+
+    <h1>Home</h1>
+    <h3>{{home.user.citySelected().ds_name}}</h3>
+</div>
