added new button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="app/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="app/libs/ladda/dist/ladda-themeless.min.css">
         <link rel="stylesheet" href="app/libs/angular-ui-select/dist/select.min.css">
-
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <link href="app/libs/animate.css/animate.min.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
