--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -2,8 +2,40 @@
 
     <div class="row">
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-            <img src="app/assets/images/logo.png" width="80px" />
-            <h1>Home</h1>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <img src="app/assets/images/logo.png" width="80px" style="margin-left:-20px" />
+                </div>
+            </div>
+
+            <br />
+            <br />
+            <!---------- menu bar ---------->
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+
+                        <p class="navbar_page_title">{{home.current_state.title | uppercase}}</p>
+
+                    </div>
+                </div>
+
+            </div>
+
+            <br />
+
+            <div class="row">
+                <!---------- menu bar ---------->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+
+                        <button class="btn btn-new" ><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;NUOVO</button>
+
+                    </div>
+                </div>
+
+            </div>
+
             <h3>{{home.user.citySelected().ds_name}}</h3>
         </div>
 
