--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -14,9 +14,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-
                         <p class="navbar_page_title">{{home.current_state.title | uppercase}}</p>
-
                     </div>
                 </div>
 
@@ -25,18 +23,65 @@
             <br />
 
             <div class="row">
-                <!---------- menu bar ---------->
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-
                         <button class="btn btn-new" ><i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;NUOVO</button>
-
                     </div>
                 </div>
-
             </div>
 
-            <h3>{{home.user.citySelected().ds_name}}</h3>
+            <br />
+            <br />
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <p class="font-small color-grey">GESTISCI</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <p class="font-normal color-grey">CONTENUTI</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <p class="font-normal color-grey">MEDIA</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <p class="font-normal color-grey">EDIZIONI</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <p class="font-normal color-grey">CANALI</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="padding-left-20px">
+                        <p class="font-normal color-grey">ISCRITTI</p>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
 
         <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
