--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <p class="navbar_page_title">{{home.current_state.title | uppercase}}</p>
+                        <p class="font-medium navbar_page_title">{{home.current_state.title | uppercase}}</p>
                     </div>
                 </div>
 
@@ -41,42 +41,42 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row height-30px">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <p class="font-normal color-grey">CONTENUTI</p>
+                        <a class="menu_link font-medium color-grey">CONTENUTI</a>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row height-30px">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <p class="font-normal color-grey">MEDIA</p>
+                        <a class="menu_link font-medium color-grey">MEDIA</a>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row height-30px" ng-if="home.user.isRedazione()">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <p class="font-normal color-grey">EDIZIONI</p>
+                        <a class="menu_link font-medium color-grey">EDIZIONI</a>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row height-30px" ng-if="home.user.isRedazione()">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <p class="font-normal color-grey">CANALI</p>
+                        <a class="menu_link font-medium color-grey">CANALI</a>
                     </div>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row height-30px">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <p class="font-normal color-grey">ISCRITTI</p>
+                        <a class="menu_link font-medium color-grey">ISCRITTI</a>
                     </div>
                 </div>
             </div>
