--- a/app/features/Dashboard/dashboard.view.html
+++ b/app/features/Dashboard/dashboard.view.html
@@ -1,1 +1,11 @@
-<h1>DASHBOARD</h1>
+<div id="dashboard">
+
+    <!-- NAV BAR -->
+    <div class="row">
+        <p class="font-bold font-medium"></p>
+    </div>
+
+    <!------------- body content ---------->
+
+
+</div>
