--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <p class="font-medium navbar_page_title">{{home.current_state.title | uppercase}}</p>
+                        <a class="menu_link font-medium color-grey pointer">DASHBOARD</a>
                     </div>
                 </div>
 
@@ -44,7 +44,7 @@
             <div class="row height-30px">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <a class="menu_link font-medium color-grey">CONTENUTI</a>
+                        <a class="menu_link font-medium color-grey pointer">CONTENUTI</a>
                     </div>
                 </div>
             </div>
@@ -52,7 +52,7 @@
             <div class="row height-30px">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <a class="menu_link font-medium color-grey">MEDIA</a>
+                        <a class="menu_link font-medium color-grey pointer">MEDIA</a>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <div class="row height-30px" ng-if="home.user.isRedazione()">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <a class="menu_link font-medium color-grey">EDIZIONI</a>
+                        <a class="menu_link font-medium color-grey pointer">EDIZIONI</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
             <div class="row height-30px" ng-if="home.user.isRedazione()">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <a class="menu_link font-medium color-grey">CANALI</a>
+                        <a class="menu_link font-medium color-grey pointer">CANALI</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +76,7 @@
             <div class="row height-30px">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <a class="menu_link font-medium color-grey">ISCRITTI</a>
+                        <a class="menu_link font-medium color-grey pointer">ISCRITTI</a>
                     </div>
                 </div>
             </div>
