--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <script type="text/javascript" src="app/features/Login/login.controller.js"></script>
         <script type="text/javascript" src="app/features/ChooseCity/choose_city.controller.js"></script>
         <script type="text/javascript" src="app/features/Home/home.controller.js"></script>
+        <script type="text/javascript" src="app/features/Dashboard/dashboard.controller.js"></script>
 
         <!-- Bootstrap core JavaScript
         ================================================== -->
