--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
         <script type="text/javascript" src="app/features/Home/home.controller.js"></script>
         <script type="text/javascript" src="app/features/Dashboard/dashboard.controller.js"></script>
 
+        <script type="text/javascript" src="app/features/Media/media.controller.js"></script>
+        <script type="text/javascript" src="app/features/Contenuti/contenuti.controller.js"></script>
+        <script type="text/javascript" src="app/features/Edizioni/edizioni.controller.js"></script>
+        <script type="text/javascript" src="app/features/Canali/canali.controller.js"></script>
+        <script type="text/javascript" src="app/features/Iscritti/iscritti.controller.js"></script>
+
+
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
