--- a/app/features/Dashboard/dashboard.view.html
+++ b/app/features/Dashboard/dashboard.view.html
@@ -2,11 +2,18 @@
 
     <!-- NAV BAR -->
     <div class="row">
-        <p class="font-bold font-medium color-mid-grey" style="margin-bottom:0">{{dash.current_state.title | uppercase}}</p>
-        <p class="font-bold font-medium" style="color: {{dash.city.assets_color}}">{{dash.city.ds_name | uppercase}} SMART</p>
+        <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <p class="font-bold font-medium color-mid-grey" style="margin-bottom:0">{{dash.current_state.title | uppercase}}</p>
+            <p class="font-bold font-medium" style="color: {{dash.city.assets_color}}">{{dash.city.ds_name | uppercase}} SMART</p>
+        </div>
     </div>
 
     <!------------- body content ---------->
 
+    <div class="row page_content">
+        <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+            <h1>DASHBOARD</h1>
+        </div>
+    </div>
 
 </div>
