--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -44,7 +44,7 @@
             <div class="row height-30px">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="padding-left-20px">
-                        <a class="menu_link font-medium color-grey pointer">CONTENUTI</a>
+                        <a class="menu_link font-medium color-grey pointer" ui-serf="home.contenuti">CONTENUTI</a>
                     </div>
                 </div>
             </div>
