--- a/app/features/Media/media.view.html
+++ b/app/features/Media/media.view.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <p class="font-bold font-medium color-mid-grey" style="margin-bottom:0">{{media.current_state.title | uppercase}}</p>
-            <p class="font-bold font-medium" style="color: {{dash.city.assets_color}}">{{media.city.ds_name | uppercase}} SMART</p>
+            <p class="font-bold font-medium" style="color: {{media.city.assets_color}}">{{media.city.ds_name | uppercase}} SMART</p>
         </div>
     </div>
 
