--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -13,6 +13,10 @@
     <div class="row page_content">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <h1>Contenuti</h1>
+
+            <div ng-repeat="article in contenuti.articles">
+                <h1>{{article.title()}}</h1>
+            </div>
         </div>
     </div>
 
