--- a/index.html
+++ b/index.html
@@ -122,12 +122,14 @@
         <!--------- MODELS --------->
         <script type="text/javascript" src="app/models/admin.model.js"></script>
         <script type="text/javascript" src="app/models/article.model.js"></script>
+        <script type="text/javascript" src="app/models/channel.model.js"></script>
 
         <!-- SERVICES -->
         <script type="text/javascript" src="app/services/bus.service.js"></script>
         <script type="text/javascript" src="app/services/api.service.js"></script>
         <script type="text/javascript" src="app/services/admin.service.js"></script>
         <script type="text/javascript" src="app/services/articles.service.js"></script>
+        <script type="text/javascript" src="app/services/channels.service.js"></script>
 
         <!-- FEATURES -->
         <script type="text/javascript" src="app/features/main.controller.js"></script>
