--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                    <button class="btn btn-grey btn-block">
+                    <button ladda="contenuti.options.articleWorking()" class="btn btn-grey btn-block" ng-click="contenuti.applyFilters()">
                         APPLICA&nbsp;&nbsp;&nbsp;<span class="lsf">right</span></button>
                 </div>
 
@@ -77,7 +77,7 @@
         <br/>
 
         <div class="row">
-            <div ng-repeat="article in contenuti.articles | filter: contenuti.filters">
+            <div ng-repeat="article in contenuti.articles">
                 <h1>
                     {{article.abstract()}}
                 </h1>
