--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -59,7 +59,7 @@
                 <div class="col-lg-10 col-md-10 col-sm-6 col-xs-6">
                     <div class="row border-bottom-grey" style="padding-left: 0px;margin-left: 0px;">
                         <div class="col-lg-11 col-sm-11 col-md-10 col-xs-10" >
-                            <!--<span class="search-icon lsf">search</span>-->
+                            <span class="search-icon lsf">search</span>
                             <input class="form-control search-input" placeholder="Cerca in tutti i post" ng-model="contenuti.options.textToSearch" type="text">
                         </div>
                     </div>
@@ -78,11 +78,51 @@
 
             <div class="row">
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+
+                    <!---------- ELEMENT ---------->
                     <div class="row" ng-repeat="article in contenuti.articles">
                         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                            <h1>
-                                {{article.abstract()}}
-                            </h1>
+
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <!------------- FIRST COL --------->
+                                    <div class="row">
+                                        <div class="col-lg-2">
+                                            <img ng-src="{{contenuti.channelService.byId(article.id_channel).iconImageUrl()}}" width="30px"/>
+                                        </div>
+                                        <div class="col-lg-10">
+                                            <div class="row no-padding">
+                                                <div class="col-lg-12">
+                                                    <p class="font-bold no-padding">{{contenuti.channelService.byId(article.id_channel).ds_name}}</p>
+                                                </div>
+                                            </div>
+                                            <div class="row no-padding">
+                                                <div class="col-lg-12">
+                                                    <p class="font-bold no-padding">{{contenuti.channelService.byId(article.id_channel).ds_name}}</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="row no-padding">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xa-12">
+                                            <p class="color-grey font-small">ARTICOLO</p>
+                                        </div>
+                                    </div>
+                                    <div class="row no-padding">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xa-12">
+                                            <p class="font-medium font-bold">{{article.title()}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-2">
+
+                                </div>
+                                <div class="col-lg-3">
+
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
