--- a/index.html
+++ b/index.html
@@ -37,11 +37,16 @@
         <div class="maincontent animated fadeIn">
 
             <div class="row">
+                <!--
                 <div class="col-xs-1 col-sm-1 col-md-2 col-lg-2"></div>
                 <div class="col-xs-10 col-sm-10 col-md-8 col-lg-8">
                     <ui-view></ui-view>
                 </div>
                 <div class="col-xs-1 col-sm-1 col-md-2 col-lg-2"></div>
+                -->
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 master-uiview">
+                    <ui-view></ui-view>
+                </div>
             </div>
 
         </div>
