--- a/app/features/Home/home.view.html
+++ b/app/features/Home/home.view.html
@@ -1,7 +1,7 @@
 <div id="home" ng-controller="HomeController as home" style="padding-top:20px">
 
     <div class="row">
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <img src="app/assets/images/logo.png" width="80px" style="margin-left:-20px" />
@@ -84,7 +84,7 @@
 
         </div>
 
-        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+        <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10" style="padding-left:30px;">
             <ui-view id="container_view"></ui-view>
         </div>
     </div>
