--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <script type="text/javascript" src="app/libs/ladda/dist/spin.min.js"></script>
         <script type="text/javascript" src="app/libs/ladda/dist/ladda.min.js"></script>
         <script type="text/javascript" src="app/libs/angular-ladda/dist/angular-ladda.min.js"></script>
+        <script type="text/javascript" src="app/libs/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
