--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -146,8 +146,8 @@
 
                                     <div class="row no-padding">
                                         <div class="col-lg-12 col-md-12 col-sm-12 col-xa-12">
-                                            <p ng-if="article.publishDate()" class="font-medium padding-top-5">{{article.publishDate() | date:'dd-MM-yyyy'}}</p>
-                                            <p ng-if="!article.publishDate()" class="font-medium padding-top-5 font-bold"></p>
+                                            <p ng-if="article.dt_publication_date" class="font-medium padding-top-5">{{article.publishDate() | date:'dd-MM-yyyy'}}</p>
+                                            <p ng-if="!article.dt_publication_date" class="font-medium padding-top-5 font-bold"></p>
                                         </div>
                                     </div>
                                 </div>
@@ -174,6 +174,27 @@
                 </div>
             </div>
 
+            <!---- END LIST --------->
+
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <!-- Single button -->
+                    <div class="btn-group pull-right" uib-dropdown is-open="contenuti.options.pager.isopen">
+                        <button id="single-button" type="button" class="btn btn-pager mydropdown" uib-dropdown-toggle>
+                            <span class="pull-left">PAGINA 1</span>
+                            <span class="pull-right lsf">dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li role="menuitem" ng-repeat="page in contenuti.generatePages()">
+                                <a href="#">PAGINA {{page}}</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
 
