--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -81,7 +81,7 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
                     <!---------- ELEMENT ---------->
-                    <div class="row" ng-repeat="article in contenuti.articles">
+                    <div class="row" ng-repeat="article in contenuti.articles | limitTo:contenuti.options.pager.limit:-(contenuti.options.pager.active*contenuti.options.pager.limit)">
                         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
                             <div class="row">
@@ -183,12 +183,12 @@
                     <!-- Single button -->
                     <div class="btn-group pull-right" uib-dropdown is-open="contenuti.options.pager.isopen">
                         <button id="single-button" type="button" class="btn btn-pager mydropdown" uib-dropdown-toggle>
-                            <span class="pull-left">PAGINA 1</span>
-                            <span class="pull-right lsf">dropdown</span>
+                            <span class="pull-left">PAGINA {{contenuti.options.pager.active}}</span>
+                            <span class="pull-right lsf ">dropdown</span>
                         </button>
                         <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                             <li role="menuitem" ng-repeat="page in contenuti.generatePages()">
-                                <a href="#">PAGINA {{page}}</a>
+                                <a ng-click="contenuti.changePage(page)">PAGINA {{page}}</a>
                             </li>
                         </ul>
                     </div>
